# cetic-cloud-cli

./: .gitignore  CLAUDE.md  README.md  cetic.spec  pyproject.toml
.github/workflows/: release.yml
cetic/: _format.py  _iam_arn.py  _load.py  _resolve.py  _secrets.py  client.py  config.py  main.py
cetic/commands/: _catalog.py  _compute.py  _render.py  api_key.py  appgw.py  auth.py  bastion.py  billing.py  bucket.py  config_cmd.py  container.py  db.py  iam.py  ip.py  k8s.py  key.py  lb.py  member.py  org.py  quota.py  region.py  registry.py  scale_set.py  schedule.py  secret.py  service_account.py  ssh.py  support.py  tag.py  template.py  vm.py  vnet_peering.py  volume.py  vpc.py  vpc_peering.py  vpn.py  windows.py
tests/: conftest.py  test_appgw.py  test_auth_sso.py  test_bastion.py  test_catalog.py  test_client_error_detail.py  test_client_headers.py  test_client_refresh.py  test_compute_create_options.py  test_config.py  test_disk_sizing.py  test_iam.py  test_ip.py  test_k8s.py  test_k8s_templates.py  test_key.py  test_lb.py  test_org.py  test_registry.py  test_resource_update.py  test_schedule.py  test_service_account.py  test_ssh.py  test_vnet_peering.py  test_vpc.py  test_vpc_peering.py  test_vpn.py  test_windows.py
