[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cetic-cloud-cli"
version = "0.6.0"
requires-python = ">=3.12"
description = "CLI CETIC Cloud Platform — commande cetic"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "keyring>=25.0.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pyinstaller>=6.9.0",
]

[project.scripts]
cetic = "cetic.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cetic*"]

[tool.ruff]
line-length = 100
target-version = "py312"
